# ChangeLog for dev-python/pyprof2calltree
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyprof2calltree/ChangeLog,v 1.4 2013/10/02 02:52:01 patrick Exp $

*pyprof2calltree-1.1.1 (02 Oct 2013)

  02 Oct 2013; Patrick Lauer <patrick@gentoo.org> +pyprof2calltree-1.1.1.ebuild:
  Bump

  16 Jun 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due #122207

  15 Dec 2012; Ulrich Müller <ulm@gentoo.org> pyprof2calltree-1.1.0.ebuild:
  Fix LICENSE, MIT (Expat) according to license notice in pyprof2calltree.py,
  bug 445422.

*pyprof2calltree-1.1.0 (02 Jan 2011)

  02 Jan 2011; Brian Harring <ferringb@gentoo.org>
  +pyprof2calltree-1.1.0.ebuild:
  Initial import.