@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pyprof2calltree
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyprof2calltree/ChangeLog,v 1.4 2013/10/02 02:52:01 patrick Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyprof2calltree/ChangeLog,v 1.5 2014/04/12 13:47:40 idella4 Exp $
+
+*pyprof2calltree-1.3.1 (12 Apr 2014)
+
+  12 Apr 2014; Ian Delaney <idella4@gentoo.org> +pyprof2calltree-1.3.1.ebuild:
+  bump; add py3.4 support
 
 *pyprof2calltree-1.1.1 (02 Oct 2013)
 
